--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@babel/parser": "^7.26.9",
     "@babel/traverse": "^7.26.9",
     "@babel/types": "^7.26.9",
+    "@vitejs/plugin-react": "^5.0.4",
     "vite": "^6.3.1",
     "vite-plugin-plain-text": "^1.4.2",
     "vite-plugin-tsl-operator": "^1.2.3"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.3.0",
     "@tweakpane/plugin-essentials": "^0.2.1",
     "is-mobile": "^5.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "three": "^0.176.0",
     "tweakpane": "^4.0.5",
     "tweakpane-plugin-infodump": "^4.0.2"
