--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "@tweakpane/plugin-essentials": "^0.2.1",
     "is-mobile": "^5.0.0",
+    "jotai": "^2.8.4",
     "three": "^0.176.0",
     "tweakpane": "^4.0.5",
-    "tweakpane-plugin-infodump": "^4.0.2"
+    "tweakpane-plugin-infodump": "^4.0.2",
+    "zustand": "^5.0.2"
   }
 }
