--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "is-mobile": "^5.0.0",
     "three": "^0.176.0",
     "tweakpane": "^4.0.5",
-    "tweakpane-plugin-infodump": "^4.0.2"
+    "tweakpane-plugin-infodump": "^4.0.2",
+    "zustand": "^4.5.7"
   }
 }
